--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -5,8 +5,9 @@
   <table class=" table table-striped sortable">
     <thead>
       <tr>
-        <th>Name</th>
-        <th>created Time</th>
+        <th>Category name</th>
+        <th>Created Time</th>
+        <th>Product count</th>
       </tr>
     </thead>
 
@@ -15,8 +16,9 @@
        <tr>
         <td><%= link_to category.name, category_path(category) %></td>
         <td><%= category.created_at.strftime("%d-%b-%-y") %></td>
+        <td><%= category.products.count %></td>
         <td><%= link_to("Edit", edit_category_path(category)) %></td>
-        <td><%= link_to("Delete", category_path(category), method: :delete) %></td>
+        <td><%= link_to "Delete", category_path(category), method: :delete, data: {confirm: "Are you sure?"} %></td>
       </tr>
      <% end %>
    </tbody>
