--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,13 @@
 <%= bootstrap_form_for @resource, html: {multipart: true} do |f| %>
+  <% if @resource.errors.any? %>
+    <div id="error_explanation">
+      <ul>
+        <% @resource.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>  
   <%= f.text_field :name, required: true %>
   <%= f.text_field :price, required: true %>
   <%= f.file_field :images, multiple: true %>
