--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
-  <p><b>Procuct name: </b> <%= @product.name %></p>
-  <p><b>Product price: </b><%= @product.price %></p>
-  <p><b>Prodcut Categories</b> <%= @product.categories.map { |e| e.name  }.join(', ') %></p>
+  <p><b>Procuct name: </b> <%= @resource.name %></p>
+  <p><b>Product price: </b><%= @resource.price %></p>
+  <p><b>Prodcut Categories</b> <%= @resource.categories.map { |e| e.name  }.join(', ') %></p>
   <b>Product Images:</b>
-  <% @product.images.each do |image| %>
+  <% @resource.images.each do |image| %>
     <%= image_tag image, class: 'product_image_size' %>
     <br>
   <% end %>
