add css changes

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,4 +22,8 @@
       </tr>
      <% end %>
    </tbody>
+  </table>
  </div>
+<div id="paginate">
+  <%= paginate @resources, theme: 'twitter-bootstrap-4' %>
+</div>
