--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -2,6 +2,7 @@
   <h2>Category Listing</h2>
   <div class="col-12">
     <%= link_to "New Category", new_category_path, class: "btn  btn-outline-secondary btn-sm float-right mb-2" %>
+    <%= link_to "New Product", new_product_path, class: "btn  btn-outline-secondary btn-sm float-right mb-2 mr-2" %>
   </div>
   <table class=" table table-striped sortable">
     <thead>
