--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,4 @@
+<div id="product" data-product-id="<%= @resource.id %>" data-latitude="<%= @resource.latitude %>" data-longitude="<%= @resource.longitude %>"></div>
 <div class="row">
   <div class="col">
      <div class="wrap">
@@ -27,3 +28,23 @@
       </div>
     </div>
 </div>
+
+
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
+<br>
+
+<%=  bootstrap_form_for @resource, url: {controller: 'products', action: 'update_address'}  do |f| %>
+  <div class='row'>
+    <div class="col-6">
+      <%= f.text_field :city, readonly: true %>
+      <%= f.text_field :state, readonly: true %>
+    </div>
+    <div class="col-6">
+      <%= f.text_field :country, readonly: true %>
+      <%= f.text_field :pincode %>
+    </div>
+  </div>
+  <%= f.submit 'Update location' %>
+<% end %>
