--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,25 +28,42 @@
       </div>
     </div>
 </div>
-
+<br><br>
 
 <div style='width: 800px;'>
   <div id="map" style='width: 800px; height: 400px;'></div>
 </div>
 <br>
 
-<%=  bootstrap_form_for @resource, url: {controller: 'products', action: 'update_address'}  do |f| %>
-  <div class='row'>
-    <div class="col-12">
-      <%= f.text_field :address %>
-    </div>
-    <div class="col-6">
-      <%= f.text_field :city, readonly: true %>
-      <%= f.text_field :state, readonly: true %>
-    </div>
-    <div class="col-6">
-      <%= f.text_field :country, readonly: true %>
-      <%= f.text_field :pincode %>
+
+<div class='row'>
+  <div class="col-12">
+    <div class="form-group">
+      <label for="product_address">Address</label>
+      <input class="form-control" type="text" value= <%= @resource.address %>  id="product_address" placeholder="Enter a location" autocomplete="off">
     </div>
   </div>
-<% end %>
+  <div class="col-6">
+    <div class="form-group">
+      <label for="product_city">City</label>
+      <input readonly="readonly" class="form-control" type="text" value=<%= @resource.city %>  id="product_city">
+    </div>
+
+    <div class="form-group">
+      <label >State</label>
+      <input readonly="readonly" class="form-control" type="text" value= <%= @resource.state %> id="product_state">
+    </div>
+  </div>
+  <div class="col-6">
+    <div class="form-group">
+      <label>Country</label>
+      <input readonly="readonly" class="form-control" type="text" value=<%= @resource.country %>  id="product_country">
+    </div>
+
+    <div class="form-group">
+      <label>Pincode</label>
+      <input class="form-control" type="text" value=<%= @resource.pincode %>  id="product_pincode">
+    </div>
+
+  </div>
+</div>
