--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -24,46 +24,44 @@
           <%= link_to "Back", products_path, class: 'btn btn-sm btn-info' %>
           <td><%= link_to "Edit", edit_product_path(@resource) , class: 'btn btn-sm btn-primary'  %></td>
           <td><%= link_to "Delete", product_path(@resource), method: :delete, data: {confirm: "Are you sure?"},class: 'btn btn-sm btn-danger' %></td>
+          <td><%= link_to "Manage Location", "#",class: 'btn btn-sm btn-success', id: "manage_location", data: { turbolinks: false } %></td>
         </div>
       </div>
     </div>
 </div>
 <br><br>
 
-<div style='width: 800px;'>
+<div id="map_wrapper" style='width: 800px;'>
   <div id="map" style='width: 800px; height: 400px;'></div>
-</div>
-<br>
-
-
-<div class='row'>
-  <div class="col-12">
-    <div class="form-group">
-      <label for="product_address">Address</label>
-      <input class="form-control" type="text" value= <%= @resource.address %>  id="product_address" placeholder="Enter a location" autocomplete="off">
+  <div class='row'>
+    <div class="col-12">
+      <div class="form-group">
+        <label for="product_address">Address</label>
+        <input class="form-control" type="text" value= <%= @resource.address %>  id="product_address" placeholder="Enter a location" autocomplete="off">
+      </div>
     </div>
-  </div>
-  <div class="col-6">
-    <div class="form-group">
-      <label for="product_city">City</label>
-      <input readonly="readonly" class="form-control" type="text" value=<%= @resource.city %>  id="product_city">
-    </div>
+    <div class="col-6">
+      <div class="form-group">
+        <label for="product_city">City</label>
+        <input readonly="readonly" class="form-control" type="text" value=<%= @resource.city %>  id="product_city">
+      </div>
 
-    <div class="form-group">
-      <label >State</label>
-      <input readonly="readonly" class="form-control" type="text" value= <%= @resource.state %> id="product_state">
+      <div class="form-group">
+        <label >State</label>
+        <input readonly="readonly" class="form-control" type="text" value= <%= @resource.state %> id="product_state">
+      </div>
     </div>
-  </div>
-  <div class="col-6">
-    <div class="form-group">
-      <label>Country</label>
-      <input readonly="readonly" class="form-control" type="text" value=<%= @resource.country %>  id="product_country">
-    </div>
+    <div class="col-6">
+      <div class="form-group">
+        <label>Country</label>
+        <input readonly="readonly" class="form-control" type="text" value=<%= @resource.country %>  id="product_country">
+      </div>
 
-    <div class="form-group">
-      <label>Pincode</label>
-      <input class="form-control" type="text" value=<%= @resource.pincode %>  id="product_pincode">
-    </div>
+      <div class="form-group">
+        <label>Pincode</label>
+        <input class="form-control" type="text" value=<%= @resource.pincode %>  id="product_pincode">
+      </div>
 
+    </div>
   </div>
 </div>
