--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
   <h2>Category Listing</h2>
   <div class="col-12">
-    <%= link_to "New Category", new_category_path, class: "btn  btn-outline-secondary btn-sm float-right mb-2" %>
-    <%= link_to "New Product", new_product_path, class: "btn  btn-outline-secondary btn-sm float-right mb-2 mr-2" %>
+    <% if current_user.admin? %>
+      <%= link_to "New Category", new_category_path, class: "btn  btn-outline-secondary btn-sm float-right mb-2" %>
+      <%= link_to "New Product", new_product_path, class: "btn  btn-outline-secondary btn-sm float-right mb-2 mr-2" %>
+    <% end %>
   </div>
   <table class=" table table-striped sortable">
     <thead>
@@ -20,8 +22,10 @@
           <td><%= category.created_at.strftime("%d-%b-%-y") %></td>
           <td><%= category.products.count %></td>
           <td><%= link_to("View",category_path(category)) %></td>
-          <td><%= link_to("Edit", edit_category_path(category)) %></td>
-          <td><%= link_to "Delete", category_path(category), method: :delete, data: {confirm: "Are you sure?"} %></td>
+          <% if current_user.admin? %>
+            <td><%= link_to("Edit", edit_category_path(category)) %></td>
+            <td><%= link_to "Delete", category_path(category), method: :delete, data: {confirm: "Are you sure?"} %></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
