--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAimpQrqnB_pftBReNA94ZGYc7HPXYbqPw&libraries=places&sensor=false&callback=initMap"
+    <script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAimpQrqnB_pftBReNA94ZGYc7HPXYbqPw&libraries=places,visualization,geometry&sensor=false&callback=initMap"
       type="text/javascript"></script>
   </head>
   <body>
