--- a/app/views/products/_map.html.erb
+++ b/app/views/products/_map.html.erb
@@ -12,32 +12,32 @@
       <div class="form-group">
         <label for="product_address">Address</label>
         <% if params[:action] == 'edit' %>
-          <input class="form-control" type="text" value= <%= @resource.address %>  id="product_address" placeholder="Enter a location" autocomplete="off">
+          <input class="form-control" type="text" value='<%= @resource.address %>'  id="product_address" placeholder="Enter a location" autocomplete="off">
         <% else %>
-          <input class="form-control" readonly="readonly" type="text" value= '<%= @resource.address %>'>
+          <input class="form-control" readonly="readonly" type="text" value='<%= @resource.address %>'>
         <% end %>
       </div>
     </div>
     <div class="col-6">
       <div class="form-group">
         <label for="product_city">City</label>
-        <input readonly="readonly" class="form-control" type="text" value=<%= @resource.city %>  id="product_city">
+        <input readonly="readonly" class="form-control" type="text" value='<%= @resource.city %>'  id="product_city">
       </div>
 
       <div class="form-group">
         <label >State</label>
-        <input readonly="readonly" class="form-control" type="text" value= <%= @resource.state %> id="product_state">
+        <input readonly="readonly" class="form-control" type="text" value='<%= @resource.state %>' id="product_state">
       </div>
     </div>
     <div class="col-6">
       <div class="form-group">
         <label>Country</label>
-        <input readonly="readonly" class="form-control" type="text" value=<%= @resource.country %>  id="product_country">
+        <input readonly="readonly" class="form-control" type="text" value='<%= @resource.country %>'  id="product_country">
       </div>
 
       <div class="form-group">
         <label>Pincode</label>
-        <input class="form-control" type="text" value=<%= @resource.pincode %>  id="product_pincode">
+        <input class="form-control" type="text" value='<%= @resource.pincode %>'  id="product_pincode">
       </div>
     </div>
   </div>
