--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,10 @@
 <div class="container">
   <h2>Product Listing</h2>
   <div class="col-12">
-    <%= link_to "New Product", new_product_path, class: "btn  btn-outline-secondary btn-sm float-right mb-2" %>
+  <% if current_user.admin? %>
+      <%= link_to  "New Product", new_product_path, class: "btn  btn-outline-secondary btn-sm 
+    float-right mb-2" %>
+    <% end %>
   </div>
   <table class=" table table-striped sortable">
     <thead>
@@ -19,8 +22,10 @@
           <td><%= product.price %></td>
           <td><%= product.categories.map { |e| e.name }.join(', ') %></td>
           <td><%= link_to("View", product_path(product)) %></td>
+          <% if current_user.admin? %>
           <td><%= link_to("Edit", edit_product_path(product)) %></td>
           <td><%= link_to "Delete", product_path(product), method: :delete, data: {confirm: "Are you sure?"} %></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
