--- a/app/views/products/_map.html.erb
+++ b/app/views/products/_map.html.erb
@@ -1,12 +1,12 @@
 <div id="product" data-product-id="<%= @resource.id %>" data-latitude="<%= @resource.latitude %>" data-longitude="<%= @resource.longitude %>"></div>
 
-<!-- <div >
-  
-</div>
-<br> -->
-
 <div id="map_wrapper" style='width: 800px;'>
-  <div id="map" style='width: 800px; height: 400px;'></div>
+  <% if params[:action] == 'show' %>
+    <%= image_tag "http://maps.googleapis.com/maps/api/staticmap?center=#{@resource.latitude},#{@resource.longitude}&markers=#{@resource.latitude},#{@resource.longitude}&zoom=15&size=640x400&key=AIzaSyAimpQrqnB_pftBReNA94ZGYc7HPXYbqPw",
+              class: 'img-fluid img-rounded', alt: "#{@resource.name} on the map"%>
+  <% else %>
+    <div id="map" style='width: 800px; height: 400px;'></div>
+  <% end %>
   <div class='row'>
     <div class="col-12">
       <div class="form-group">
@@ -42,3 +42,5 @@
     </div>
   </div>
 <div>
+
+
