--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -16,30 +16,34 @@
     float-right mb-2" %>
     <% end %>
   </div>
-  <table class=" table table-striped sortable">
-    <thead>
-      <tr>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Categories</th>
-        <th colspan="3">Actions</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @resources.each do |product| %>
+  <% if @resources.present? %>
+    <table class=" table table-striped sortable">
+      <thead>
         <tr>
-          <td><%= link_to product.name, product_path(product) %></td>
-          <td>$<%= product.price %></td>
-          <td><%= product.categories.map { |e| e.name }.join(', ') %></td>
-          <td><%= link_to("View", product_path(product)) %></td>
-          <% if current_user.admin? %>
-          <td><%= link_to("Edit", edit_product_path(product)) %></td>
-          <td><%= link_to "Delete", product_path(product), method: :delete, data: {confirm: "Are you sure?"} %></td>
-          <% end %>
+          <th>Name</th>
+          <th>Price</th>
+          <th>Categories</th>
+          <th colspan="3">Actions</th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        <% @resources.each do |product| %>
+          <tr>
+            <td><%= link_to product.name, product_path(product) %></td>
+            <td>$<%= product.price %></td>
+            <td><%= product.categories.map { |e| e.name }.join(', ') %></td>
+            <td><%= link_to("View", product_path(product)) %></td>
+            <% if current_user.admin? %>
+            <td><%= link_to("Edit", edit_product_path(product)) %></td>
+            <td><%= link_to "Delete", product_path(product), method: :delete, data: {confirm: "Are you sure?"} %></td>
+            <% end %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  <% else %>
+    <h5>No products available!</h5>
+  <% end %>
  </div>
 <div id="paginate">
   <%= paginate @resources, theme: 'twitter-bootstrap-4' %>
