--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -12,7 +12,7 @@
         <th>Category name</th>
         <th>Created Time</th>
         <th>Product count</th>
-        <th colspan="3">Actions</th>
+        <th colspan="4">Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -21,10 +21,11 @@
           <td><%= link_to category.name, category_path(category) %></td>
           <td><%= category.created_at.strftime("%d-%b-%-y") %></td>
           <td><%= category.products.count %></td>
-          <td><%= link_to("View",category_path(category)) %></td>
+          <td><%= link_to "View products", products_path(category_id: category.id) %></td>
           <% if current_user.admin? %>
             <td><%= link_to("Edit", edit_category_path(category)) %></td>
-            <td><%= link_to "Delete", category_path(category), method: :delete, data: {confirm: "Are you sure?"} %></td>
+            <td><%= link_to "Delete only category", category_path(category), method: :delete, data: {confirm: "Are you sure?"} %></td>
+            <td><%= link_to "Delete category with products", delete_category_with_products_category_path(category), method: :delete, data: {confirm: "Are you sure?"} %></td>
           <% end %>
         </tr>
       <% end %>
