product type crud and add it in template

--- a/app/views/category_templates/_form.html.erb
+++ b/app/views/category_templates/_form.html.erb
@@ -157,8 +157,8 @@
   <br>
   <div class="col-6">
     <label>Parking Fees</label>
-    <%= check_box 'category_template[parking_fees]', 'required', {}, 'true', 'true' %>Required
-    <%= check_box 'category_template[parking_fees]', 'optional', {}, 'true', 'true' %>Optional
+    <%= check_box 'category_template[parking_fees]', 'required', {}, 'true', 'false' %>Required
+    <%= check_box 'category_template[parking_fees]', 'optional', {}, 'true', 'false' %>Optional
   </div>
 
 
