--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -15,6 +15,7 @@
         <% if current_user.role == 'admin' %>
           <li class="nav-item"><%= link_to 'Categories', categories_path, class: 'nav-link' %></li>
           <li class="nav-item"><%= link_to 'Templates', category_templates_path, class: 'nav-link' %></li>
+          <li class="nav-item"><%= link_to 'Product types', product_types_path, class: 'nav-link' %></li>
         <% else %>
           <li class="nav-item"><%= link_to 'Nearby products', show_nearby_products_products_path, class: 'nav-link' %></li>
         <% end %>
