--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,19 +28,19 @@
         <% end %>
 
         <% if @resource.entry_fee_adult.present? %>
-          <div class="mb-3"><p><b>Entry Fee Adult: </b></p><%= @resource.entry_fee_adult %></div>
+          <div class="mb-3"><p><b>Entry Fee Adult: </b><%= @resource.entry_fee_adult %></p></div>
         <% end %>
 
         <% if @resource.entry_fee_toddler.present? %>
-          <div class="mb-3"><p><b>Entry Fee Toddler: </b></p><%= @resource.entry_fee_toddler %></div>
+          <div class="mb-3"><p><b>Entry Fee Toddler: </b><%= @resource.entry_fee_toddler %></p></div>
         <% end %>
 
         <% if @resource.entry_fee_child.present? %>
-          <div class="mb-3"><p><b>Entry Fee Child: </b></p><%= @resource.entry_fee_child %></div>
+          <div class="mb-3"><p><b>Entry Fee Child: </b><%= @resource.entry_fee_child %></p></div>
         <% end %>
 
         <% if @resource.entry_fee_senior_citizen.present? %>
-          <div class="mb-3"><p><b>Entry Fee Senior citizen: </b></p><%= @resource.entry_fee_senior_citizen %></div>
+          <div class="mb-3"><p><b>Entry Fee Senior citizen: </b><%= @resource.entry_fee_senior_citizen %></p></div>
         <% end %>
 
         <% if @resource.ratings.present? %>
